fix! : remove extra CSS files and modify mkdocs to support light and dark themes with high contrast code block (#13)

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,36 +1,3 @@
-/*
-## this is an attempt to get the colors fo the logo
-$ didnt work so i keep the deep purple
-:root {
-  --md-primary-fg-color:        #4f3378;
-  --md-primary-fg-color--light: #665286;
-  --md-primary-fg-color--dark:  #5c427c;
-}
-[data-md-color-scheme="CubVic"] {
-  --md-primary-fg-color:        #4f3378;
-  --md-primary-fg-color--light: #665286;
-  --md-primary-fg-color--dark:  #5c427c;
-}
-
-*/
-
-/* 
-///////////////////////////////////////////
-// Modification Nav color and icon size////
-///////////////////////////////////////////
-*/
-[data-md-color-primary=deep-purple] .md-header, [data-md-color-primary=deep-purple] .md-hero {
-    background-color: #4f3378;
-}
-
-[data-md-color-primary=deep-purple] .md-tabs {
-    background-color: #4f3378;
-}
-
-a.md-header-nav__button.md-logo img{
-  width: 48px;
-  height: 48px;
-}
 
 
 /*
@@ -55,17 +22,6 @@ a.md-header-nav__button.md-logo img{
 }
 
 
-/*
-///////////////////////
-// Inline Code block //
-///////////////////////
-*/
-
-.md-typeset code {
-  color: #ae81ff !important;
-  background-color: #313131 !important;
-  box-shadow: 0.29412em 0 0 rgba(0,0,0,.07), -0.29412em 0 0 rgba(0,0,0,.07);
-}
 
 /*
 /////////////////////////////
@@ -127,33 +83,6 @@ hr{
 }
 
 
-/*
-////////////////////
-// Navigation bar //
-////////////////////
-*/
-
-/*
-Left and right toc scrollbar
-*/
-.md-sidebar__scrollwrap::-webkit-scrollbar-thumb {
-  background-color: #E0E0E0 !important;
-}
-
-
-.md-nav--secondary .md-nav__title{
-  box-shadow: none;
-}
-
-.md-nav--lifted>.md-nav__list>.md-nav__item--active>.md-nav__link {
-  color: #F5F5F5 !important;
-  background-color: #212121 !important;
-  box-shadow: none;
-}
-.md-nav {
-  color: #F5F5F5 !important;
-  background-color: #212121 !important;
-}
 
 /*
 /////////////////////////////
